fixed overlap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -426,6 +426,7 @@ opacity: 0.1;
   list-style: none;
   margin: 20px;
   width: 200px;
+  height: 300px;
   a{
     color: white;
     font-family: georgia, sans-serif;
